fix webkit css column border/margin wrapping; reenable border

--- a/chickadee.css
+++ b/chickadee.css
@@ -362,8 +362,10 @@ td.match-sig tt {
 }
 .csscolumns #contents ul.contents-list li {
  float: none;
- width: auto;
- border: none;  /* No borders for now; webkit especially has rendering problems when border wraps */
+ width: 100%;
+ display: inline-block;  /* fix webkit margin wrapping.  `-webkit-column-break-inside: avoid` also works */
+ border: none;
+ border-bottom: 1px solid #e8e8e8;
 }
 
 #contents.sidebar ul.contents-list {
